# ChangeLog for sys-apps/module-init-tools
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.68 2004/10/02 15:36:16 swegener Exp $

  02 Sep 2004; Mike Frysinger <vapier@gentoo.org>
  module-init-tools-3.0-r1.ebuild, module-init-tools-3.0-r2.ebuild,
  module-init-tools-3.0.ebuild:
  Start blocking modutils.

  04 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  module-init-tools-3.0-r2.ebuild:
  Stable everywhere since baselayout-1.9.4 depends on it

  02 Jun 2004; Travis Tilley <lv@gentoo.org> module-init-tools-3.0-r2.ebuild:
  stable on amd64

  15 May 2004; Joshua Kinard <kumba@gentoo.org> module-init-tools-3.0.ebuild:
  Marked stable on mips.

*module-init-tools-3.0-r2 (07 May 2004)

  07 May 2004; Aron Griffis <agriffis@gentoo.org>
  +module-init-tools-3.0-r2.ebuild:
  Add patch to allow --assume-kernel option to generate-modprobe.conf for bug
  49926

*module-init-tools-3.0-r1 (03 May 2004)

  03 May 2004; Jon Portnoy <avenj@gentoo.org> module-init-tools-3.0-r1.ebuild :
  Install static insmod for 2.4 kernels. Fix from Sascha Silbe in bug
  #45279.

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  module-init-tools-0.9.15_pre4.ebuild, module-init-tools-3.0.ebuild,
  module-init-tools-3.0_pre10.ebuild, module-init-tools-3.0_pre5.ebuild,
  module-init-tools-3.0_pre9.ebuild:
  Add die following econf for bug 48950

  23 Apr 2004; Guy Martin <gmsoft@gentoo.org> module-init-tools-3.0.ebuild:
  Added a guess fix for modutils on hppa.

  23 Apr 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  module-init-tools-3.0.ebuild:
  Stable on sparc (blame me), x86, amd64, ppc64 (blame johnm)

*module-init-tools-3.0 (29 Mar 2004)

  29 Mar 2004; Jon Portnoy <avenj@gentoo.org>
  module-init-tools-3.0.ebuild :
  Version bump. Bug 43087.

  29 Mar 2004; Jon Portnoy <avenj@gentoo.org> 
  module-init-tools-3.0_pre10.ebuild, 
  module-init-tools-3.0_pre9.ebuild,