@@ -1,2 +1,0 @@
-MD5 f8bfc480c4168978eca7037cd341da07 module-init-tools-3.0.tar.bz2 120768
-MD5 704c8d2834bcaa6f31d4ad79d154157a modutils-2.4.26.tar.bz2 235135
