@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/module-init-tools
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.68 2004/10/02 15:36:16 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.69 2004/10/03 06:40:46 vapier Exp $
+
+  03 Oct 2004; Mike Frysinger <vapier@gentoo.org>
+  module-init-tools-3.0-r2.ebuild:
+  Fix the ksyms links #35601.
 
   02 Sep 2004; Mike Frysinger <vapier@gentoo.org>
   module-init-tools-3.0-r1.ebuild, module-init-tools-3.0-r2.ebuild,
